fix icons font size and horizontal scroll on mobile

--- a/src/style/_icons.scss
+++ b/src/style/_icons.scss
@@ -9,6 +9,7 @@
 		text-decoration: none;
 		color: #000;
 		width: 110px;
+		font-size: 12px;
 	}
 
 	&__text {
