--- a/src/style/_person.scss
+++ b/src/style/_person.scss
@@ -3,6 +3,7 @@
 	text-decoration: none;
 	color: inherit;
 	text-align: left;
+	margin-left: 20px;
 
 	&::after {
 		content: '';
