--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -88,7 +88,7 @@ html, body {
 	&--white {
 		background: #fff;
 		color: #000;
-		padding: 40px 20px 20px;
+		padding: 40px 0 20px;
 	}
 
 	&--extended {
